ui dark mode fixed

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,17 @@
   text-align: center;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.example::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 html,body{
   transition: all .25s ease-in-out;
 }
